--- a/index.html
+++ b/index.html
@@ -181,41 +181,7 @@
                                 </div>
                                 <a href="#">2573 отзывов</a>
                             </div>
-                            <p class="item_price">6 990 руб</p>
-                            <div class="choice_color">
-                                <span style="background: #232323;"></span>
-                                <span style="background: #DCC8B2;"></span>
-                                <span style="background: #B29A7E;"></span>
-                                <span style="background: #CFA97E;"></span>
-                            </div>
-                            <div class="item_btn">
-                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
-                                <a href="#">
-                                    <img src="img/home/bug.svg" loading="lazy" alt="bug">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item_wrap_img">
-                                <span style="background: #000;">10%</span>
-                                <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
-                                <a href="#" class="favorite">
-                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
-                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
-                                </a>
-                            </div>
-                            <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
-                            <div class="reviews_wrap">
-                                <div class="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                </div>
-                                <a href="#">2573 отзывов</a>
-                            </div>
-                            <p class="item_price">6 990 руб</p>
+                            <p class="item_price">6 990 руб <span>7550 руб</span></p>
                             <div class="choice_color">
                                 <span style="background: #232323;"></span>
                                 <span style="background: #DCC8B2;"></span>
@@ -249,41 +215,7 @@
                                 </div>
                                 <a href="#">2573 отзывов</a>
                             </div>
-                            <p class="item_price">6 990 руб</p>
-                            <div class="choice_color">
-                                <span style="background: #232323;"></span>
-                                <span style="background: #DCC8B2;"></span>
-                                <span style="background: #B29A7E;"></span>
-                                <span style="background: #CFA97E;"></span>
-                            </div>
-                            <div class="item_btn">
-                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
-                                <a href="#">
-                                    <img src="img/home/bug.svg" loading="lazy" alt="bug">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item_wrap_img">
-                                <span style="background: #000;">10%</span>
-                                <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
-                                <a href="#" class="favorite">
-                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
-                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
-                                </a>
-                            </div>
-                            <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
-                            <div class="reviews_wrap">
-                                <div class="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                </div>
-                                <a href="#">2573 отзывов</a>
-                            </div>
-                            <p class="item_price">6 990 руб</p>
+                            <p class="item_price">6 990 руб <span>7550 руб</span></p>
                             <div class="choice_color">
                                 <span style="background: #232323;"></span>
                                 <span style="background: #DCC8B2;"></span>
@@ -317,41 +249,7 @@
                                 </div>
                                 <a href="#">2573 отзывов</a>
                             </div>
-                            <p class="item_price">6 990 руб</p>
-                            <div class="choice_color">
-                                <span style="background: #232323;"></span>
-                                <span style="background: #DCC8B2;"></span>
-                                <span style="background: #B29A7E;"></span>
-                                <span style="background: #CFA97E;"></span>
-                            </div>
-                            <div class="item_btn">
-                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
-                                <a href="#">
-                                    <img src="img/home/bug.svg" loading="lazy" alt="bug">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item_wrap_img">
-                                <span style="background: #000;">10%</span>
-                                <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
-                                <a href="#" class="favorite">
-                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
-                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
-                                </a>
-                            </div>
-                            <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
-                            <div class="reviews_wrap">
-                                <div class="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                    <img src="img/home/star.svg" loading="lazy" alt="star">
-                                </div>
-                                <a href="#">2573 отзывов</a>
-                            </div>
-                            <p class="item_price">6 990 руб</p>
+                            <p class="item_price">6 990 руб <span>7550 руб</span></p>
                             <div class="choice_color">
                                 <span style="background: #232323;"></span>
                                 <span style="background: #DCC8B2;"></span>
@@ -385,7 +283,143 @@
                                 </div>
                                 <a href="#">2573 отзывов</a>
                             </div>
-                            <p class="item_price">6 990 руб</p>
+                            <p class="item_price">6 990 руб <span>7550 руб</span></p>
+                            <div class="choice_color">
+                                <span style="background: #232323;"></span>
+                                <span style="background: #DCC8B2;"></span>
+                                <span style="background: #B29A7E;"></span>
+                                <span style="background: #CFA97E;"></span>
+                            </div>
+                            <div class="item_btn">
+                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
+                                <a href="#">
+                                    <img src="img/home/bug.svg" loading="lazy" alt="bug">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item_wrap_img">
+                                <span style="background: #9f5025;">Best seller</span>
+                                <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
+                                <a href="#" class="favorite">
+                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
+                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
+                                </a>
+                            </div>
+                            <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
+                            <div class="reviews_wrap">
+                                <div class="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                </div>
+                                <a href="#">2573 отзывов</a>
+                            </div>
+                            <p class="item_price">6 990 руб <span>7550 руб</span></p>
+                            <div class="choice_color">
+                                <span style="background: #232323;"></span>
+                                <span style="background: #DCC8B2;"></span>
+                                <span style="background: #B29A7E;"></span>
+                                <span style="background: #CFA97E;"></span>
+                            </div>
+                            <div class="item_btn">
+                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
+                                <a href="#">
+                                    <img src="img/home/bug.svg" loading="lazy" alt="bug">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item_wrap_img">
+                                <span style="background: #9f5025;">Best seller</span>
+                                <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
+                                <a href="#" class="favorite">
+                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
+                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
+                                </a>
+                            </div>
+                            <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
+                            <div class="reviews_wrap">
+                                <div class="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                </div>
+                                <a href="#">2573 отзывов</a>
+                            </div>
+                            <p class="item_price">6 990 руб <span>7550 руб</span></p>
+                            <div class="choice_color">
+                                <span style="background: #232323;"></span>
+                                <span style="background: #DCC8B2;"></span>
+                                <span style="background: #B29A7E;"></span>
+                                <span style="background: #CFA97E;"></span>
+                            </div>
+                            <div class="item_btn">
+                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
+                                <a href="#">
+                                    <img src="img/home/bug.svg" loading="lazy" alt="bug">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item_wrap_img">
+                                <span style="background: #9f5025;">Best seller</span>
+                                <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
+                                <a href="#" class="favorite">
+                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
+                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
+                                </a>
+                            </div>
+                            <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
+                            <div class="reviews_wrap">
+                                <div class="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                </div>
+                                <a href="#">2573 отзывов</a>
+                            </div>
+                            <p class="item_price">6 990 руб <span>7550 руб</span></p>
+                            <div class="choice_color">
+                                <span style="background: #232323;"></span>
+                                <span style="background: #DCC8B2;"></span>
+                                <span style="background: #B29A7E;"></span>
+                                <span style="background: #CFA97E;"></span>
+                            </div>
+                            <div class="item_btn">
+                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
+                                <a href="#">
+                                    <img src="img/home/bug.svg" loading="lazy" alt="bug">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item_wrap_img">
+                                <span style="background: #9f5025;">Best seller</span>
+                                <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
+                                <a href="#" class="favorite">
+                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
+                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
+                                </a>
+                            </div>
+                            <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
+                            <div class="reviews_wrap">
+                                <div class="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                    <img src="img/home/star.svg" loading="lazy" alt="star">
+                                </div>
+                                <a href="#">2573 отзывов</a>
+                            </div>
+                            <p class="item_price">6 990 руб <span>7550 руб</span></p>
                             <div class="choice_color">
                                 <span style="background: #232323;"></span>
                                 <span style="background: #DCC8B2;"></span>
